--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <p>Página do Petersen</p>
-<button onclick="windown.open('https://petersendias.github.io/projetos/planetas/','_blank')">Planetas</button>
+<button onclick="window.open('https://petersendias.github.io/projetos/planetas/','_blank')">Planetas</button>
 
 </body>
 
